[workspace]
resolver = "2"

members = [
    "surveyor-gnc",
    "surveyor-graphics",
    "surveyor-physics",
    "surveyor-app",
]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
nalgebra = {version = "0.32.2", package = "na"}
bevy = {version = "0.12.1"}
bevy_app = "0.12"
bevy_ecs = "0.12"
