[workspace]
resolver = "2"

members = [
    "surveyor-gnc",
    "surveyor-graphics",
    "surveyor-physics",
    "surveyor-app",
    "surveyor-types",
]
default-members = ["surveyor-graphics"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]
nalgebra = {version = "0.32.2", package = "na"}
bevy = {version = "0.13.2"}
bevy_app = "0.13"
bevy_ecs = "0.13"
bevy_derive = "0.13"
anise = { version = "0.1.0", git = "https://github.com/thomasantony/anise" }
nyx-space = { version = "2.0.0-alpha", git = "https://github.com/thomasantony/nyx", default-features = false}
