[package]
name = "surveyor-app"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = {version = "0.10.1", default-features = false}
bevy_app = { version = "0.10.1", default-features = false}
surveyor-gnc = { path = "../surveyor-gnc" }
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
log = "0.4.19"
plotly = { version = "0.8.3", features = ["wasm"] }
wasm-bindgen = "0.2.87"
wasm-bindgen-futures = "0.4.37"
web-sys = "0.3.64"
