[package]
name = "surveyor-gnc"
version = "0.1.0"
edition = "2021"
description = "A simple GNC flight software implementation using bevy-ecs"

[dependencies]
surveyor-types ={ path = "../surveyor-types" }

nalgebra = {workspace = true}
bevy     = {workspace = true}
bevy_app = {workspace = true}
bevy_ecs = {workspace = true}

dashmap = "5.4.0"
log = "0.4.19"

bevy-debug-text-overlay = "7.0.0"
hard-xml = "1.27.0"
hifitime = {version = "3.8.6", git="https://github.com/nyx-space/hifitime.git", branch="master"}
