[package]
name = "surveyor-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy     = {workspace = true, features = ["jpeg", "png"]}
nalgebra = {workspace = true}
bevy-inspector-egui = "0.21"
big_space = "0.4.0"
bevy_panorbit_camera = "0.9.2"

surveyor-physics = { path = "../surveyor-physics" }
surveyor-gnc = { path = "../surveyor-gnc" }
bevy-debug-text-overlay = "7.0.0"
bevy_screen_diagnostics = "0.4.0"
