[package]
name = "surveyor-graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { workspace = true, features = ["jpeg", "png"] }
nalgebra = { workspace = true }
big_space = "0.6.0"

surveyor-physics = { path = "../surveyor-physics" }
surveyor-gnc = { path = "../surveyor-gnc" }
surveyor-types = { path = "../surveyor-types" }
bevy-debug-text-overlay = "8.1.0"
bevy_screen_diagnostics = "0.5.0"
