[package]
name = "surveyor-physics"
version = "0.1.0"
edition = "2021"

[dependencies]
surveyor-gnc = { path = "../surveyor-gnc" }
surveyor-types = { path = "../surveyor-types" }

nalgebra = {workspace = true}
bevy     = {workspace = true}
bevy_app = {workspace = true}
bevy_ecs = {workspace = true}

hard-xml = "1.25.0"
rvstruct = "0.3.2"
log = "0.4.19"
hifitime = {version = "3.8.6", git="https://github.com/nyx-space/hifitime", branch="master"}

enum-as-inner = "0.6.0"
console_error_panic_hook = "0.1.7"
console_log = { version = "1.0.0", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.64", features = ["Window", "Document", "HtmlElement"] }
bevy_enum_filter = "0.3.0"
bevy-debug-text-overlay = "7.0.0"
anise = { version = "*", git = "https://github.com/thomasantony/anise", branch="web-support" }
thiserror = "1.0.50"
bytes = "=1.5.0"

[dev-dependencies]
approx = "0.5.1"
