[package]
name = "surveyor-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hard-xml = "1.27.0"
rvstruct = "0.3.2"
nalgebra = { workspace = true }
bevy_ecs = { workspace = true }
bevy_derive = { workspace = true }
